webcam experiment starter code
works on my desktop, phone didn't ask to use camera :/

--- a/demo/bench.html
+++ b/demo/bench.html
@@ -116,6 +116,13 @@
 
 
                     const start = new THREE.Vector3(0, 0, 0);
+                    // const marker_entity = conf => {
+                    //     const position  
+                    //     const to        = 
+
+                    //     const entity = document.createElement('a-entity');
+                    //     entity.
+                    // }
 
                     const top_pos = new THREE.Vector3(0, 0.25, 0);
                     for (let i = 0; i < 12; i++) {
@@ -156,6 +163,8 @@
                     }
 
                 }
+
+                // turned based game, characters can be set to move beyond the rage of their current turn, by moving at a rate that can be covered by their stamina regen
 
                 // function mark_pos(pos0, pos1) {
 
