--- a/index.html
+++ b/index.html
@@ -164,8 +164,9 @@
             <p>=====</p>
             <p>Oh, hi there! For now please enjoy this simple scene.</p>
             <p>=====</p>
-            <p>This app is meant to be opened on a google cardboard capable phone</p>
-            <p>Cell phone controls to be discussed.</p>
+            <p>For now, this app is meant to be opened using a WASD+mouse configuration.</p>
+            <p>This is mostly a test, but functionalities should greatly increase once when I eventually get to hooking this up to a database.</p>
+            <p>For now, I'm also working on a robot that I want to control via this interface, in VR, so it feels like I'm piloting a Mech.</p>
             <p>=====</p>
             <p>You start out in a <span class="red">MYSTERIOUS VOID</span>.</p>
             <p>Your eyes grate on the GREAT WALL OF TEXT.</p>
