--- a/demo/ar.html
+++ b/demo/ar.html
@@ -12,7 +12,7 @@
         <!-- <section id="main"></section> -->
         <a-scene arjs>
 
-            <a-camera position="0 0 0" look-controls="enabled: false" near="0.001" wasd-controls>
+            <a-camera position="0 0 0" look-controls="enabled: false; pointerLockEnabled: true" near="0.001" wasd-controls>
                 <a-cylinder id="fing-longer" position="0.2 -0.4 -0.9" radius="0.01" height= "1.0" rotation="90 0 0" color="beige" opacity="1.0"></a-cylinder>
                 <a-entity position="0.2 -0.4 -1.4" cursor="rayOrigin: entity; showLine: true;" raycaster="showLine: true; far: 16" line="color: white; opacity:0.5"></a-entity>
             </a-camera>
