--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
             <p>TODAY'S MENU</p>
             <br>
             <ul><span class="red">►</span> WebVR Video Player <a href="demo/player">[open]</a></li></ul>
+            <ul><span class="red">►</span> Touch movement controls <a href="demo/touch-controls.html">[open]</a></li></ul>
             <br>
             <br>
             <p>20181228</p>
