--- a/demo/audio.html
+++ b/demo/audio.html
@@ -37,7 +37,7 @@
                     <a-entity id='rotating-stuff'>
                         <!-- <a-animation attribute='rotation' to='0 -360 0' repeat='indefinite'  dur='10000' easing='linear'></a-animation> -->
                         <a-animation attribute='position' to='0 0 -5' repeat='indefinite'  dur='10000' easing='linear'></a-animation>
-                        <a-text value='rotating text' align='center' rotation='-90 0 0'></a-text>
+                        <a-text value='moving text' align='center' rotation='-90 0 0'></a-text>
                         <!-- <a-sphere radius='0.025' position='0 0 -0.475' sound='src: #transit; autoplay: true'> -->
                             
                         <!-- https://developers.google.com/web/updates/2017/09/autoplay-policy-changes#webaudio -->
