--- a/index.html
+++ b/index.html
@@ -135,8 +135,25 @@
             <br>
             <p>TODAY'S MENU</p>
             <br>
-            <ul><span class="red">►</span> WebVR Video Player <a href="demo/player">[open]</a></li></ul>
-            <ul><span class="red">►</span> Touch movement controls <a href="demo/touch-controls.html">[open]</a></li></ul>
+
+            <ul>
+                <li>
+                    <span class="red">►</span> WebVR Micro-Demos <a href="demo/index.html">[open]</a>
+                </li>
+                <li>
+                    <span class="red">►</span> Project Robot <a href="https://www.youtube.com/watch?v=YwtfH2BK4ac&list=PLp1h6x4FOZbD1WFxB6FbCl7TboPiQIAH8">[open]</a>
+                </li>
+            </ul>
+
+            <br>
+            <h1>A place for stuff</h1>
+            <br>
+            <p>I don't want to keep creating new repos for new stuff. I'll put stuff here instead.</p>
+            <p>"Remember kids, the only difference between screwing around and science is writing it down" - Alex Jason (balistics expert)</p>
+            <p>=====</p>
+            <p>Oh, hi there! For now please enjoy this simple scene.</p>
+            <p>=====</p>
+
             <br>
             <br>
             <p>20181228</p>
@@ -154,17 +171,12 @@
             <p>20190201</p>
             <p>Imagine a table where everyone in the would could sit at, at the same time.</p>
             <br>
+            <p>20190525</p>
+            <p>Bought an Oculus Quest, testing this stuff should be much easier ging forward, I can definitely see it being my main WebVR device.</p>
             <!-- <p>20190116</p> -->
             <!-- <p>Cardboard controls live!</p> -->
             <!--123456789 123456789 1234567894444444444 123456789 123456789 1234567898888888888 123456789 123456789 123456789 123456789 123456789 123456789 -->
             <br>
-            <h1>A place for stuff</h1>
-            <br>
-            <p>I don't want to keep creating new repos for new stuff. I'll put stuff here instead.</p>
-            <p>"Remember kids, the only difference between screwing around and science is writing it down" - Alex Jason (balistics expert)</p>
-            <p>=====</p>
-            <p>Oh, hi there! For now please enjoy this simple scene.</p>
-            <p>=====</p>
             <p>For now, this app is meant to be opened using a WASD+mouse configuration.</p>
             <p>This is mostly a test, but functionalities should greatly increase once when I eventually get to hooking this up to a database.</p>
             <p>For now, I'm also working on a robot that I want to control via this interface, in VR, so it feels like I'm piloting a Mech.</p>
