added a llittle clarity

--- a/demo/index.html
+++ b/demo/index.html
@@ -31,7 +31,7 @@
         <p>Move around a 3D scene using an touchscreen joystick. Part of my effort to make VR scenes accessible on 2D-touchscreens as a 3D environment.</p>
 
         <h3><a href="webcam.html">webcam</a></h3>
-        <p>Webcam passthrough stuff. Originally meant to try out what passthrough would look like on a cardboard-class headset.</p>
+        <p>Webcam passthrough stuff. Originally meant to try out what passthrough would look like on a cardboard-class headset. Doesn't work on Oculus Quest, prob since the cameras are for tracking, not video.</p>
 
         <h3><a href="shaggy-rogers/index.html">Shaggy from Scooby Doo, with a bigger Shaggy in the background</a></h3>
         <p>I made this, no use not making it available. #SorryNotSorry</p>
