--- a/index.html
+++ b/index.html
@@ -132,10 +132,15 @@
 
         </a-scene>
         <div id="0Panel">
+            <h1>A place for stuff</h1>
+            <br>
+            <p>I don't want to keep creating new repos for new stuff. I'll put stuff here instead.</p>
+            <p>"Remember kids, the only difference between screwing around and science is writing it down" - Alex Jason (balistics expert)</p>
+            <br>
+            <p>The laser stick that's attached to you is a clicking device. Initially meant as a head-mounted pointing apparatus for cardboard-type devices, as an improvement to "hover to click" reticules.</p>
             <br>
             <p>TODAY'S MENU</p>
             <br>
-
             <ul>
                 <li>
                     <span class="red">►</span> WebVR Micro-Demos <a href="demo/index.html">[open]</a>
@@ -146,10 +151,6 @@
             </ul>
 
             <br>
-            <h1>A place for stuff</h1>
-            <br>
-            <p>I don't want to keep creating new repos for new stuff. I'll put stuff here instead.</p>
-            <p>"Remember kids, the only difference between screwing around and science is writing it down" - Alex Jason (balistics expert)</p>
             <p>=====</p>
             <p>Oh, hi there! For now please enjoy this simple scene.</p>
             <p>=====</p>
