oculus quest movement controls

--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
             <br>
             <ul>
                 <li>
+                    <span class="red">►</span> Oculust Quest test <a href="demo/oculus-quest/index.html">[open]</a>
+                </li>
+                <li>
                     <span class="red">►</span> WebVR Micro-Demos <a href="demo/index.html">[open]</a>
                 </li>
                 <li>
