--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <a-video id="video-clip" src="#video-asset" position="-3 2 -11" width="2.56" height="1.44" position="0 2 -5"></a-video>
 
             <a-box id="clicker-game-banner" src="clicker-game.png" position="0.5 2.5 -7.5" color="white"></a-box>
-            <a-text value="Known bugs:\n- yellow button sometimes doesn't work for a few seconds\n- click events are laggy or defaulting to 'gaze based' on mobile" position="1.1 2.5 -8"></a-text>
+            <a-text value="Known bugs:\n- yellow button sometimes doesn't work for a few seconds\n- click events are laggy or defaulting to 'gaze based' on mobile (instead of handling screen-click buttons, if available)\n= NOTE: 'NEXT' cube doesn't do anything yet" position="1.1 2.5 -8"></a-text>
 
             <a-entity class='table' position='-4 0.01 -9'>
                 <a-entity class='grid-fitter' position='0.5 0 0.5'>
