add a physics sandbox

--- a/demo/index.html
+++ b/demo/index.html
@@ -9,14 +9,16 @@
     <body style="font-family:courier; color:white; background-color: black">
         <h1>Random Demos</h1>
 
-        <p>Some demos might not work well (or at all) on your current device. I have a backlog of experiments I need to polish or un-break before adding here. Eventually I'd like a Portfolio Scene for these.</p>  
-        <p>tldr: here be dragons</p>
+        <p>Some demos might not work well (or at all) on your current device. This ain't a complete list.</p>  
 
         <!-- <h3><a href="ar.html">ar</a></h3>
         <p>Fullscreen AR</p>
 
         <h3><a href="ar-embedded.html">ar-embedded</a></h3>
         <p>AR, embedded into a regular HTML layout.</p> -->
+
+        <h3><a href="physics.html">Grip to move + Physics</a></h3>
+        <p>Custom movement controls, plus the aframe-physics-system library.</p>
 
         <h3><a href="audio.html">Positional Audio</a></h3>
         <p>A-Frame supports positional audio out of the box</p>
