--- a/demo/player/index.html
+++ b/demo/player/index.html
@@ -65,11 +65,11 @@
                 // - pre-set custom transitions between clips, default intro/outro styles that are inter-compatable?
 
                 play.addEventListener('click', () => {
-                    status.setAttribute('value', 'you last clicked play');
+                    status.setAttribute('value', 'play');
                     vid.play();
                 });
                 pause.addEventListener('click', () => {
-                    status.setAttribute('value', 'you last clicked pause');
+                    status.setAttribute('value', 'pause');
                     vid.pause();
                 });           
             }
