Fix tracer line rendering issue

--- a/demo/oculus-quest/index.html
+++ b/demo/oculus-quest/index.html
@@ -116,14 +116,14 @@
           <!-- <a-entity cursor-debug id="cursor" position="0.2 -0.4 -1.4" cursor raycaster="objects:.clickable; showLine: true; far: 16" line="color: white; opacity:0.5"></a-entity> -->
       </a-camera>
 
-      <a-entity laser-controls="hand: left" grip-to-move="targetID: camera-wrapper" raycaster="objects:.clickable; far:4">
+      <a-entity pos-trail-line laser-controls="hand: left" grip-to-move="targetID: camera-wrapper" raycaster="objects:.clickable; far:4">
         <a-box  height="0.1" width="0.1" depth="0.1" opacity="0.2"></a-box>
       </a-entity>
       <!-- <a-entity laser-controls="hand: left" hand-controller raycaster="objects:.clickable; far:4">
         <a-box  height="0.1" width="0.1" depth="0.1" opacity="0.2"></a-box>
       </a-entity> -->
 
-      <a-entity laser-controls="hand: right" hand-controller raycaster="objects:.clickable; far:4">
+      <a-entity pos-trail-line laser-controls="hand: right" hand-controller raycaster="objects:.clickable; far:4">
         <a-box  height="0.1" width="0.1" depth="0.1" opacity="0.2"></a-box>
       </a-entity>
 
